Atualização de frent

--- a/home.html
+++ b/home.html
@@ -11,9 +11,7 @@
         <div id="interface">
             <header id="cabeçalho"> <!-- Cabeçalho do site-->
                 <h1>Economia Sustentável</h1>
-                <img id="icone"/>
                 <nav class=" menu">
-                    <br>
                     <ul class="nav justify-content-center">
                        <a href="home.html"> <li>Home</li></a>
                        <a href=".........."> <li>Ongs</li></a>
@@ -26,18 +24,25 @@
         </div>
     </header>
 
-  <div id= "Conteúdo"> 
-    <h2> Quem somos ? </h2>
-       <p> Somos  A Organização Verde <br> Um portal de acesso aos mais interessantes projetos de economia sustentável.<br>
-    Desde 2020 mudando vidas.  
-       </p>
+        <div id="corpo"> <!-- Lado esquedo da página --> 
+        <h2> Quem somos ? </h2>
+        <p> Somos <strong> A Organização Verde</strong>
+        <br> Um portal de acesso aos mais interessantes projetos de economia sustentável.<br>
+           Desde 2020 mudando vidas.  </p>
 
- </div>
-
-   <h2> Desenvolvimento Sustentável</h2>
-    <p> Desenvolvimento sustentável se trata da capacidade de utilizar os recursos e os bens da natureza sem comprometer a disponibilidade desses elementos para as gerações futuras.<br>
+        <h2> Desenvolvimento Sustentável</h2>
+        <p> Desenvolvimento sustentável se trata da capacidade de utilizar os recursos e os bens da natureza sem comprometer a disponibilidade desses elementos para as gerações futuras.<br>
          Isso significa adotar um padrão de consumo e de aproveitamento das matérias-primas extraídas da natureza de modo a não afetar o futuro da humanidade,<br>
          aliando desenvolvimento econômico com responsabilidade ambiental.</p>
+        <br>
+        <img src="_img/palestra.png">
+        </div>
 
+    <footer>
+       <hr> 
+       <p> <strong> Economia sustentável<strong> </p>
+       <p> <strong>@ecoverde</strong></p>
+    </footer>
+    
 </body>
 </html>
