--- a/doacoes.html
+++ b/doacoes.html
@@ -114,7 +114,11 @@ function alerta(){
 	<p id="conta"></p></label>
 	
 <label><p>NÚMERO DO CARTÃO <input type="number" required placeholder="ex:xxxx xxxx xxxx xxxx" id="cartão" /></p></label>
-    
+	
+    <h5 align="center">
+	    
+	<input id="btn" type="submit" value="Enviar" /></h5>
+	
 </fieldset>
 	
 <input id="btn" type="submit" value="Enviar" />
