--- a/doacoes.html
+++ b/doacoes.html
@@ -85,7 +85,7 @@ function alerta(){
 	
 	<option>Eficiência Energética/Viva Rio</option>
 	
-	<option>Agrofloresta Urbana/RioOnWatch</option>
+	<option>Agrofloresta Urbana/Horta inteligente</option>
 	
 	<option>Projeto Virada Sustentável</option>
 	
