--- a/ongs.html
+++ b/ongs.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  lang ="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta  charset = " UTF-8 " >
+    <meta  name = " viewport " content = " width = largura do dispositivo, escala inicial = 1.0 " >
+    <title>Ongs</title>
+    <link rel="stylesheet" href="ong.css"/>
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
 <body>
-    
+
+    <header> 
+        <div id="interface">
+            <header id="cabeçalho"> <!-- Cabeçalho do site-->
+                <h1>Economia Sustentável</h1>
+                <br>
+                <nav class=" menu">
+                    <ul class="nav justify-content-center">
+                       <a href="home.html"> <li> <button type="button" class="btn btn-outline-dark"> Home </button></li></a>
+                       <a href="ongs.html"> <li> <button type="button" class="btn btn-outline-dark"> Ongs </button></li></a>
+                       <a href="projetos.html"> <li> <button type="button" class="btn btn-outline-dark"> Projetos </button></li></a>
+                       <a href="doacoes.html"> <li> <button type="button" class="btn btn-outline-dark"> Doações </button></li></a>
+                       <a href="inscriçao.html"> <li> <button type="button" class="btn btn-outline-dark"> Inscrições </button></li></a>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </header>
+
+<section id="corpo"> <!-- Lado esquedo da página -->
+  <div id="first">
+           <h1 id="ongs"> Ongs</h1>
+            <h1>Mas afinal o que é uma ONG ?</h1>
+              <p>As organizações não governamentais (ONGs) são entidades privadas da sociedade civil, sem fins lucrativos, cujo propósito é defender e promover uma causa política. Desde então serve para designar as iniciativas privadas sem fins lucrativos e que não surgiram de acordos entre Estados.
+                <h1>Mas para que serve e por que é tão importante?
+                  </h1>
+                    <p>Serve para auxiliar o Estado na consecução de seus objetivos. O estado não tem tempo hábil para resolver todos os problemas e suprir todas as necessidades dos administrados. Diante das necessidades que não podem esperar a sociedade civil se organiza e funda estas Organizações.
+                     </p>
+                       <img src="ong/angolinos.jpg" />
+                        <br>
+                         <br>
+ </div>
+ <br>
+
+    <div id="segund">
+            <img src="ong/Greenpeace.jpg" width="400px" height="200px">
+            <br>
+            <br>
+            <br>
+             <h1> Greenpeace</h1>
+               <p> Greenpeace é uma organização não governamental ambiental com sede em Amesterdão, nos Países Baixos, e com escritórios espalhados em mais de 55 países. Atua internacionalmente em questões relacionadas à preservação do meio ambiente e desenvolvimento sustentável, com campanhas dedicadas às áreas de florestas (Amazônia no Brasil), clima, nuclear, oceanos, engenharia genética, substâncias tóxicas, transgênicos, agrotóxicos e energia renovável. A organização procura sensibilizar a opinião pública através de atos, publicidades e outros meios. Sua atuação é baseada nos pilares filosófico-morais da desobediência civil e tem, como princípio básico, a ação direta pacífica.
+                 </p>
+                   <p>Fundação: Vancouver, na Colômbia Britânica, no Canadá (1971)
+                          Sede: Amesterdão, nos Países Baixos<br>
+                          Empregados: 150+<br>
+                          Faturamento: 360 milhões USD (2005)<br>
+                          Website oficial:Greenpeace Brasil, Greenpeace Portugal, Greenpeace Internacional
+                                    </p>
+    </div>
+    <br>
+
+<div id="third">
+     <img src="ong/panda.png" widht="650px" height="350px" />
+       <br>
+         <h1> WWF-Brasil</h1>
+           <p>O WWF-Brasil é uma organização da sociedade civil brasileira, apartidária e sem fins lucrativos que trabalha em defesa da vida, e para isso nosso propósito é mudar a atual trajetória de degradação socioambiental. Criada em 1996, atua em todo Brasil e integra a Rede WWF (Fundo Mundial para a Natureza), presente em mais de 100 países.
+             </p>
+               <h3>Qual a missão do WWF-BRASIL?</h3>
+                  <p>Contribuir para que a sociedade brasileira conserve a natureza, harmonizando a atividade humana com a conservação da biodiversidade e com o uso racional dos recursos naturais, em benefício das gerações atual e futura.
+                    </p>
+                      <h2>Nosso propósito</h2>
+                        <p> Mudar a atual trajetória de degradação ambiental e promover um futuro no qual a sociedade e natureza vivam em harmonia</p>
+                    
+</div>
+<br>
+</section>
+ 
+<aside id=" lateral"> <!-- lado direito da página -->
+   <div id="four">
+        <img src="ong/sicana.png" widht="200px" height="200px" />
+            <h3>Conheça o projeto Sikana, uma plataforma de educação colaborativa.</h5>
+               <p>Sikana é uma palavra que traz em si dois siginificados : ensinar e aprender. Foi a partir da ideia de que todos nós temos algo a compartilhar, que um grupo de jovens idealistas partiu em uma expedição pelo mundo para registar os conhecimentos práticos de diversas comunidades e criou o www.sikana.tv. A proposta, desde o início, era criar vídeos educativos para melhorar a vida das pessoas. Como os ensinamentos vêm de moradores das próprias comunidades, os vídeos servem ao bem comum, passando de geração em geração os costumes locais. E o mais importante de tudo é uma forma de mostrar e documentar a cultura de diferentes partes do planeta.</p>
+                 <p>No site iremos ver videos de agricultura urbana, como salvar uma vida, atividade física na Terceira Idade, Energias Renováveis, como se preparar para uma epidemia, Como se preparar em caso de um desastre natual, a fazer Ioga e Agricultura sustentável em pequena escala.</p>
+                   <p>Teremos Gastronomia, Artes , Faça você mesmo( construir coisas com as suas próprias mãos e tranforme seu lar em um lugar melhor), Natureza, Saúde e Esportes.</p>
+                     <h3>Sobre nós:</h6>
+                       <p>A missão da Sikana é inspirar e ajudar cada indivíduo a viver uma vida plena, independente e digna a serviço do bem comum</p>
+                         <img src="ong/menino.jpg" widht="200px" height="200px" />
+   </div>
+        <br>
+
+   <div id="five">
+        <img src="ong/ipe.png" widht="300px" height="300px" />
+           <p>O IPÊ - Instituto de Pesquisas Ecológicas é uma organização não governamental brasileira, considerada uma das maiores do país. Foi fundada oficialmente em 1992 pelo casal Suzana e Cláudio Pádua e alguns pesquisadores, envolvidos nos estudos para a preservação do Mico-leão-preto.</p>
+             <p>Promove ações para proteção do ambiente, acolhendo diversas causas, auxilia populações a criarem práticas ecológicas e contribui na educação pela ESCAS - Escola Superior de Conservação Ambiental e Sustentabilidade que foi criada em 2005 e forma pesquisadores e líderes especialistas em assuntos ambientais, arquitetando um laço socioambiental, sendo essa a missão do Instituto.</p>
+               <h3>Qual a história por tras disso tudo ?</h3>
+                 <p>O projeto que deu início ao IPÊ foi o Mico-Leão-Preto, no Pontal do Paranapanema. Suzana Pádua e seu marido, Cláudio Pádua mudaram-se para essa localidade e dando base ao estudo, foi criado o Instituto. Este projeto inicial tinha como objetivo proteger a espécie do Mico-Leão-Preto estudando as populações consideradas isoladas deste animal, por conta do desmatamento ocorrido na região Oeste do Estado de São Paulo. Com a junção do Instituto e moradores locais, a educação ambiental disseminada tornou-se um dos pilares para o IPÊ.</p>
+                   <p>Segundo Suzana Pádua, presidente do Instituto, o mundo naquela época estava necessitando organizações que cuidassem da parte socioambiental, tanto do Brasil quanto do mundo.</p>
+                    <h3>No que o IPÊ atua ?</h3>
+                      <p>O Instituto atua para descobrir meios de conservar tanto de espécies quanto de áreas que estão sofrendo principalmente pela ação humana, desenvolve educação ambiental para conservação da biodiversidade que atualmente está desaparecendo em uma velocidade muito rápida, faz pesquisa de espécies ameaçadas de extinção, restaura habitats e também realiza intervenções para que pessoas sejam alertadas de problemas ambientais.</p>
+                       <img src="ong/mico.jpg" widht="200px" height="200px" />
+    </div>
+</aside>
+
+<div class="footer">
+    <footer class="footer">
+     <hr>
+     <p><strong> Economia sustentável</strong></p>
+     <p> Brasília-DF</p>
+     <p><strong> @ecoverde</strong></p>
+     <a href=" https://www.instagram.com/ecoverdemt/?hl=pt-br"> <img src="insta.png"> <img src="face.png"> </a>
+     </footer>
+   </div>
+   
 </body>
 </html>
